2006-08-06  Will Duquette <will@wjduquette.com>
	* Major reorganization of the code modules.  snit.tcl and
	snit2.tcl are now just short loader scripts.  The Snit 1.x
	compiler and run-time library are implemented in main1.tcl and
	main1_83.tcl, respectively; the Snit 2.x compiler and run-time
	are in main2.tcl.  Both loaders load validate.tcl, which contains
	the new validation types.  This scheme is documented in
	modules.txt.

	* Bumped the Snit 1.x version number to Snit 1.2, since 
	Snit 1.1 has been a robust, stable release.

	* snit83.tcl: Removed; obsolete
	* snit84.tcl: Removed; obsolete

	* snit.tcl, main1_83.tcl: snit_tcl83_utils.tcl is now sourced in
	snit.tcl rather than main1_83.tcl.  I don't believe this should
	cause a problem....but it needs to be tested.

	* snit.test: Added tests for Snit validation types.  These tests 
	pass for Snit 2.x and for Snit 1.2 with Tcl 8.4.  They *should*
	pass for Snit 1.2 with Tcl 8.3, but I've been unable to test that.

	* README.txt: Updated

	* main1.tcl, snit.test: Implemented the "-type" option-definition
	option for Snit 1.2 and Tcl 8.4, and added related tests.

	* Still to do: 
	   1. Implement the "-type" option-definition option in
	      main1_83.tcl and main2.tcl.
	   2. Write documentation for "-type" and for the Snit 
	      validation types.
	   3. Consider refactoring main1.tcl, main1_83.tcl for
	      maximum commonality, to simplify future changes of
	      this kind.

2006-08-05  Will Duquette <will@wjduquette.com>
	* validate.tcl: New module; defines a number of "validation
	types".  These will be used with the forthcoming "-type"
	option-definition option to add robust validation for snit::type
	and snit::widget options.
	
2006-07-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snitfaq.man: Finally fixed the two ambigous section titles.

2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* snit.tcl: Fixed [SF Tcllib Bug 1414589], prevent the package